alchemistry-leaderboard/alchemistry-leaderboard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alchemistry-leaderboard
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: alchemistry-leaderboard
  template:
    metadata:
      labels:
        app: alchemistry-leaderboard
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/alchemistry-leaderboard:1.1.0
        name: alchemistry-leaderboard
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 250Mi
          limits:
            cpu: 1000m
            memory: 500Mi
      imagePullSecrets:
      - name: github
