alchemistry-leaderboard/alchemistry-leaderboard-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alchemistry-leaderboard-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`alchemistry-leaderboard.dysnomia.studio`)
    kind: Rule
    services:
    - name: alchemistry-leaderboard-svc
      port: 80
    middlewares:
      - name: security
  tls:
    certResolver: le
